[package]
name = "panoramix-rs"
version = "0.1.0"
edition = "2021"
description = "High-performance EVM decompiler written in Rust, inspired by Panoramix"
license = "MIT"
repository = "https://github.com/palkeo/panoramix"
authors = ["Port from Panoramix by palkeo"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
once_cell = "1.19"
fxhash = "0.2"
parking_lot = "0.12"
smallvec = { version = "1.13", features = ["serde"] }
regex = "1.10"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "decompile"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
